--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,30 @@
   <meta charset="utf-8">
   <title>PortfolioSite</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-nav></app-nav>
+
+  <div class="container demo">
+      <div class="content">
+         <div id="large-header" class="large-header">
+            <canvas id="demo-canvas"></canvas>
+            <h1 class="main-title">Ashish Patel <span class="thin"><br>Full Stack Web Developer</span></h1>
+
+         </div>
+      </div>
+   </div>
+
+   <app-root></app-root>
+
+   <app-footer></app-footer>
+
+
+ <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
+ <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
+ <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js"></script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </body>
 </html>
