Added bootstrap and font-awesome library, redesigned nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,28 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-nav></app-nav>
 
-  <div class="container demo">
-      <div class="content">
-         <div id="large-header" class="large-header">
-            <canvas id="demo-canvas"></canvas>
-            <h1 class="main-title">Ashish Patel <span class="thin"><br>Full Stack Web Developer</span></h1>
+  <div class="">
+    <app-nav></app-nav>
 
-         </div>
+    <div class="demo">
+        <div class="content">
+            <div id="large-header" class="large-header">
+              <canvas id="demo-canvas"></canvas>
+              <h1 class="main-title">Ashish Patel <span class="thin"><br>Full Stack Web Developer</span></h1>
+
+            </div>
+        </div>
       </div>
-   </div>
 
-   <app-root></app-root>
+      <app-root></app-root>
 
-   <app-footer></app-footer>
+      <app-footer></app-footer>
+  </div>
 
-
- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js"></script>
+ <script src="node_modules/ashish patel/TweenLite.min.js"></script>
+ <script src="node_modules/ashish patel/EasePack.min.js"></script>
+ <script src="node_modules/ashish patel/demo.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </body>
