designed front end components ;

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
         <div class="content">
             <div id="large-header" class="large-header">
               <canvas id="demo-canvas"></canvas>
-              <h1 class="main-title">Ashish Patel <span class="thin"><br>Full Stack Web Developer</span></h1>
+              <div class="main-title">
+                  <h1 class="mmain-title">Ashish Patel <span class="thin"><br>Full Stack Web Developer</span></h1>
+                  <p id="shabdawali">Text here...</p>
+              </div>
 
             </div>
         </div>
@@ -26,9 +29,13 @@
       <app-footer></app-footer>
   </div>
 
+
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
  <script src="node_modules/ashish patel/TweenLite.min.js"></script>
  <script src="node_modules/ashish patel/EasePack.min.js"></script>
  <script src="node_modules/ashish patel/demo.js"></script>
+ <script src="node_modules/shabdawali/dist/shabdawali.js"></script>
+ <script src="node_modules/ashish patel/shabdawali-line.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </body>
