--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
- <script src="/js/TweenLite.min.js"></script>
- <script src="/js/EasePack.min.js"></script>
- <script src="/js/demo.js"></script>
- <script src="/js/shabdawali.js"></script>
- <script src="/js/shabdawali-line.js"></script>
+ <script src="./js/TweenLite.min.js"></script>
+ <script src="./js/EasePack.min.js"></script>
+ <script src="./js/demo.js"></script>
+ <script src="./js/shabdawali.js"></script>
+ <script src="./js/shabdawali-line.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="/runtime.js"></script>
