--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
 
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
- <script src="portfolio-site/js/TweenLite.min.js"></script>
- <script src="portfolio-site/js/EasePack.min.js"></script>
- <script src="portfolio-site/js/demo.js"></script>
- <script src="portfolio-site/js/shabdawali.js"></script>
- <script src="portfolio-site/js/shabdawali-line.js"></script>
+ <script src="js/TweenLite.min.js"></script>
+ <script src="js/EasePack.min.js"></script>
+ <script src="js/demo.js"></script>
+ <script src="js/shabdawali.js"></script>
+ <script src="js/shabdawali-line.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="portfolio-site/runtime.js"></script>
-  <script type="text/javascript" src="portfolio-site/polyfills.js"></script>
-  <script type="text/javascript" src="portfolio-site/styles.js"></script>
-  <script type="text/javascript" src="portfolio-site/scripts.js"></script>
-  <script type="text/javascript" src="portfolio-site/vendor.js">
-  </script><script type="text/javascript" src="portfolio-site/main.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script>
+  <script type="text/javascript" src="polyfills.js"></script>
+  <script type="text/javascript" src="styles.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="vendor.js">
+  </script><script type="text/javascript" src="main.js"></script></body>
 </html>
