--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <script src="js/TweenLite.min.js"></script>
  <script src="js/EasePack.min.js"></script>
  <script src="js/demo.js"></script>
- <script src="js/shabdawali.js"></script>
+ <script src="js/shabdawali.min.js"></script>
  <script src="js/shabdawali-line.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
