--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ashish Patel - Full Stack Web Developer Portfolio</title>
-  <base href="portfolio-site/">
+  <base href="/portfolio-site">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
